--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index"
+    "start": "node index"
   },
   "author": "Abhishek Gupta",
   "license": "ISC",
   "dependencies": {
+    "check-domain": "^1.1.8",
+    "dns": "^0.2.2",
     "express": "^4.16.2",
     "google-books-search": "^0.3.1",
     "morgan": "^1.9.0"
